# ppe

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  all_python_code.txt  file_order.txt  main.py  missing_employees_log.txt  pyproject.toml
data/: asset_employee_mapping.json  asset_purchase_assignments.json  asset_types_data.csv  assets_data.csv  assets_data_associates.csv  assets_data_cleaned.csv  assets_data_flattened_cleaned.csv  assets_data_flattened_cleaned_mapped.csv  assets_data_with_assignments.csv  combined_asset_class_type_mapping.txt  combined_item_product_mapping.txt  combined_vendor_mapping.txt  departments_data.csv  filewave_data.csv  filtered_active_employees.csv  headcount_data.csv  linked_assets_data.csv  netsuite_data.csv  netsuite_data_cleaned.csv  netsuite_vendor_mapping.txt  products_data.csv  requesters_data.csv  vendors_data.csv
notebooks/: eda.ipynb  main.ipynb  standardization.ipynb
ppe/: freshservice_data.py  freshservice_mapping.py  headcount_processing.py  main.py
src/: 01_data_retrieval_freshservice.py  02_data_retrieval_airtable.py  03_data_processing_freshservice.py  04_data_processing_headcount.py  05_data_standardization.py  06_laptop_matching.py  __init__.py  airtable_data.py  data_processing_freshservice.py  data_processing_headcount.py  data_retrieval_airtable.py  data_retrieval_freshservice.py  data_standardization.py  freshservice_data.py  freshservice_mapping.py  freshservice_processing.py  headcount_matching.py  headcount_processing.py  laptop_matching.py  link_tables.py  matching_streamlit_app.py  (+9 more)
(+7 files in other folders)
