[tool.poetry]
name = "ppe"
version = "0.1.0"
description = ""
authors = ["Ahmet Besiroglu <ahmetybesiroglu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
pyairtable = "^2.3.3"
dedupe = "^3.0.3"
thefuzz = "^0.22.1"
openai = "^1.46.0"
streamlit = "^1.38.0"
rapidfuzz = "^3.9.7"
scikit-learn = "^1.5.2"
watchdog = "^4.0"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
ipykernel = "^6.29.5"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
